package org.supremecode.pluginsdk.result;

public enum TestStatus {
    PASSED,
    FAILED,
    ERROR,
    SKIPPED
}
